Reformatted backend to use routes and new entry point. (#16)
* Reformatted backend to use routes and new entry point

* Removed package-lock from repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node,react
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,react
+### Vscode ###
+.vscode
 
 ### Node ###
+
+# Package lock
+package-lock.json
+
 # Logs
 logs
 *.log
